# whisper-srt

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.ja.md  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: publishing-guide.md
docs/tickets/: 001-default-language-english.md  002-output-path-default.md  003-vocabulary-refactor.md  004-vocabulary-file-loading.md  005-code-english.md  006-pypi-publish.md  007-pipx-support.md  008-readme-english.md  009-readme-japanese.md  010-contributing.md
src/transcribe/: __init__.py  __main__.py
src/transcribe/application/: __init__.py  protocols.py
src/transcribe/domain/: __init__.py  config_loader.py  vocabulary.py  vocabulary_loader.py
src/transcribe/infrastructure/: __init__.py  mock_client.py  openai_client.py  whisper_client.py
src/transcribe/interface/: __init__.py  cli.py
tests/: __init__.py  conftest.py
tests/unit/: __init__.py
tests/unit/domain/: test_config_loader.py  test_vocabulary.py  test_vocabulary_loader.py
tests/unit/infrastructure/: __init__.py  test_mock_client.py  test_openai_client.py  test_whisper_client.py
tests/unit/interface/: __init__.py  test_cli.py
