[project]
name = "transcribe-srt"
version = "0.1.0"
description = "Transcribe MP3 audio to SRT subtitle format using Whisper"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "tomada" }]
keywords = ["whisper", "transcription", "srt", "subtitle", "audio"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0,<9.0.0",
    "pytest-mock>=3.12.0,<4.0.0",
    "pytest-cov>=4.1.0,<6.0.0",
    "mypy>=1.7.0,<2.0.0",
    "ruff>=0.1.0,<1.0.0",
]

[project.scripts]
transcribe-srt = "transcribe.interface.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: mark test as unit test",
    "slow: mark test as slow running",
]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
strict_equality = true
mypy_path = "src"
packages = ["transcribe"]

[[tool.mypy.overrides]]
module = "openai.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "dotenv.*"
ignore_missing_imports = true

[tool.ruff]
target-version = "py39"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "PLC",  # pylint convention
    "PLE",  # pylint error
    "PLR",  # pylint refactor
    "PLW",  # pylint warning
]
ignore = [
    "PLR0913",  # Too many arguments
    "PLR2004",  # Magic value comparison
    "UP006",    # Use `tuple` instead of `Tuple` - conflicts with Python 3.9 mypy
    "UP035",    # typing.Optional deprecated - conflicts with Python 3.9 mypy
    "UP045",    # Use `X | None` - conflicts with Python 3.9 mypy
]

[tool.ruff.lint.isort]
known-first-party = ["transcribe"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["PLC0415"]  # Allow import inside functions for test isolation

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
